# doc_img_processor

./: .bazelrc  .coverage  .gitignore  .mcp.json  BUILD.bazel  CLAUDE.md  DOMAIN.md  MODULE.bazel  PRASANTH_TODO.md  gazelle_python.yaml  pyproject.toml
.claude/skills/doc-toolkit-router/: SKILL.md
.claude/skills/passport-photo/: SKILL.md
.claude/skills/print-sheet/: SKILL.md
.claude/skills/shrink-file/: SKILL.md
dependencies/python/: BUILD.bazel  requirements-darwin-aarch64.txt  requirements-dev.in  requirements-linux-x86_64.txt  requirements.in
docs/: ANALYSIS.md  BAZEL_MIGRATION.md  HLD.md  LLD.md  OS_CS_ALGOS_PRIMITIVES.md  PLAN.md  PRD.md  RESEARCH.md  REVIEW.md
go/: BUILD.bazel  go.mod
go/cli/: BUILD.bazel  main.go
go/imagecontext/: BUILD.bazel  domain.go  infra_xdraw.go
go/pdfcontext/: BUILD.bazel  domain.go  infra_ghostscript.go  infra_pdfcpu.go  ports.go  services.go  services_test.go
go/sharedkernel/: BUILD.bazel  kernel.go
graphify-out/: .graphify_analysis.json  .graphify_extract.json  .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
pdf_toolkit/: BUILD.bazel  conftest.py  contracts_test.py  perf_test.py
pdf_toolkit/api/: BUILD.bazel  app.py  app_test.py  hardening_test.py
pdf_toolkit/cli/: BUILD.bazel  main.py  main_test.py
pdf_toolkit/image_context/: BUILD.bazel  __init__.py  application.py  lossless_test.py  ports.py  recompress_test.py  ssim_meter_test.py
pdf_toolkit/image_context/infrastructure/: BUILD.bazel  lossless.py  pillow_codec.py  ssim_meter.py
pdf_toolkit/mcp_server/: BUILD.bazel  server.py  server_test.py
pdf_toolkit/pdf_context/: BUILD.bazel  __init__.py  application.py  compressor_test.py  domain.py  ghostscript_test.py  lossless_test.py  ports.py  services.py  services_test.py
pdf_toolkit/pdf_context/infrastructure/: BUILD.bazel  ghostscript_compressor.py  pikepdf_compressor.py  pikepdf_inspector.py  pikepdf_lossless.py  pikepdf_merger.py
pdf_toolkit/pdf_context/infrastructure/agpl/: BUILD.bazel  native_compressor.py  pymupdf_codec.py
pdf_toolkit/photo_context/: BUILD.bazel  __init__.py  application.py  application_test.py  domain.py  ports.py  services.py  services_test.py
pdf_toolkit/photo_context/infrastructure/: BUILD.bazel  pillow_renderer.py
pdf_toolkit/shared_kernel/: BUILD.bazel  __init__.py
rust/: BUILD.bazel  Cargo.toml
rust/src/: lib.rs  shared_kernel.rs
rust/src/image_context/: domain.rs  infra_image.rs  mod.rs  ports.rs
rust/src/pdf_context/: domain.rs  infra_ghostscript.rs  infra_lopdf.rs  mod.rs  ports.rs  services.rs
tools/: cli.sh  install-hooks.sh  lock.sh  mcp-bazel.sh  mcp.sh  pre-commit.sh  venv.sh
