module(name = "doc_image_processor", version = "0.1.0")

# Python — native rules_python rules (no aspect_rules_py, so Gazelle needs no
# map_kind directives; it emits py_library/py_binary/py_test with correct loads).
bazel_dep(name = "rules_python",                version = "1.9.0")
bazel_dep(name = "rules_python_gazelle_plugin",  version = "1.9.0")

# Gazelle — Go + Python BUILD file generation
bazel_dep(name = "gazelle",                     version = "0.50.0")
bazel_dep(name = "rules_go",                    version = "0.60.0")

# Rust
bazel_dep(name = "rules_rust",                  version = "0.71.3")

# ── Python toolchain ──────────────────────────────────────────────────────────
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.13", is_default = True)

# ── pip — multi-platform lock files ──────────────────────────────────────────
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name            = "pypi",
    python_version      = "3.13",
    requirements_lock   = "//dependencies/python:requirements-linux-x86_64.txt",
    requirements_darwin = "//dependencies/python:requirements-darwin-aarch64.txt",
)
use_repo(pip, "pypi")

# ── Go toolchain ──────────────────────────────────────────────────────────────
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//go:go.mod")
# After first: bazel run //:gazelle -- update-repos -from_file=go/go.mod
# add use_repo(go_deps, ...) entries here for each external Go module

# ── Rust toolchain ────────────────────────────────────────────────────────────
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021", versions = ["1.87.0"])
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name           = "crate_index",
    cargo_lockfile = "//rust:Cargo.lock",
    manifests      = ["//rust:Cargo.toml"],
)
use_repo(crate, "crate_index")
