load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "pdf_toolkit",
    srcs = ["__init__.py"],
    visibility = ["//:__subpackages__"],
)

py_test(
    name = "contracts_test",
    srcs = ["contracts_test.py"],
    deps = [
        ":conftest",
        "//pdf_toolkit/api",
        "//pdf_toolkit/mcp_server",
        "@pypi//pytest",
    ],
)

py_library(
    name = "conftest",
    testonly = True,
    srcs = ["conftest.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//pdf_toolkit/api",
        "@pypi//fastapi",
        "@pypi//numpy",
        "@pypi//pillow",
        "@pypi//pytest",
    ],
)

py_test(
    name = "perf_test",
    srcs = ["perf_test.py"],
    deps = [
        ":conftest",
        "//pdf_toolkit/api",
        "//pdf_toolkit/pdf_context",
        "//pdf_toolkit/pdf_context/infrastructure",
        "//pdf_toolkit/photo_context",
        "//pdf_toolkit/photo_context/infrastructure",
        "//pdf_toolkit/shared_kernel",
        "@pypi//fastapi",
        "@pypi//numpy",
        "@pypi//pillow",
        "@pypi//pytest",
    ],
)
