load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_binary(
    name = "main",
    srcs = ["main.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//pdf_toolkit/image_context",
        "//pdf_toolkit/image_context/infrastructure",
        "//pdf_toolkit/pdf_context",
        "//pdf_toolkit/pdf_context/infrastructure",
        "//pdf_toolkit/pdf_context/infrastructure/agpl",
        "//pdf_toolkit/photo_context",
        "//pdf_toolkit/photo_context/infrastructure",
        "//pdf_toolkit/shared_kernel",
        "@pypi//pypdfium2",
    ],
)

py_library(
    name = "cli",
    srcs = [
        "__init__.py",
        "main.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//pdf_toolkit/image_context",
        "//pdf_toolkit/image_context/infrastructure",
        "//pdf_toolkit/pdf_context",
        "//pdf_toolkit/pdf_context/infrastructure",
        "//pdf_toolkit/pdf_context/infrastructure/agpl",
        "//pdf_toolkit/photo_context",
        "//pdf_toolkit/photo_context/infrastructure",
        "//pdf_toolkit/shared_kernel",
        "@pypi//pypdfium2",
    ],
)

py_test(
    name = "main_test",
    srcs = ["main_test.py"],
    deps = [
        ":cli",
        "//pdf_toolkit:conftest",
        "@pypi//pytest",
    ],
)
