load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "image_context",
    srcs = [
        "__init__.py",
        "application.py",
        "ports.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = ["//pdf_toolkit/shared_kernel"],
)

py_test(
    name = "lossless_test",
    srcs = ["lossless_test.py"],
    deps = [
        ":image_context",
        "//pdf_toolkit:conftest",
        "//pdf_toolkit/image_context/infrastructure",
        "@pypi//numpy",
        "@pypi//pillow",
        "@pypi//pytest",
    ],
)

py_test(
    name = "recompress_test",
    srcs = ["recompress_test.py"],
    deps = [
        ":image_context",
        "//pdf_toolkit:conftest",
        "//pdf_toolkit/shared_kernel",
        "@pypi//pytest",
    ],
)

py_test(
    name = "ssim_meter_test",
    srcs = ["ssim_meter_test.py"],
    deps = [
        "//pdf_toolkit:conftest",
        "//pdf_toolkit/image_context/infrastructure",
        "//pdf_toolkit/shared_kernel",
        "@pypi//numpy",
        "@pypi//pillow",
        "@pypi//pytest",
    ],
)
