load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "pdf_context",
    srcs = [
        "__init__.py",
        "application.py",
        "domain.py",
        "ports.py",
        "services.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = ["//pdf_toolkit/shared_kernel"],
)

py_test(
    name = "lossless_test",
    srcs = ["lossless_test.py"],
    deps = [
        ":pdf_context",
        "//pdf_toolkit:conftest",
        "//pdf_toolkit/pdf_context/infrastructure",
        "@pypi//numpy",
        "@pypi//pillow",
        "@pypi//pypdfium2",
        "@pypi//pytest",
    ],
)

py_test(
    name = "ghostscript_test",
    srcs = ["ghostscript_test.py"],
    deps = [
        "//pdf_toolkit:conftest",
        "//pdf_toolkit/pdf_context/infrastructure",
        "//pdf_toolkit/shared_kernel",
        "@pypi//pytest",
    ],
)
